# code-snippets

./: .gitignore  Makefile  README.md  TChan.hs  behavior.ml  behavior_modes.ml  bootscript.sh  coop.sml  coop_ex.mlb  coop_ex.sml  eff.mli  eff.sml  ephe_api.md  ephe_clean.c  exception.ml  handler_monad.ml  handlers.sml  het_list.ml  inv.ml  json_object.ml  mix_deep_and_shallow_continuations.ml  nlist.ml  open_type.ml  poor_man_conc.hs  safe_list.ml  shift_reset_cps.ml  shortest-path.z3  ssnimp-ba-eg2.z3  testTBQ.hs  test_callstack.ml  tree.ml  tree2.ml  tree_shape.ml  tree_shape_gadt.ml  unique_ref.ml  univ.ml  univ.sml
500_501_regression/: Makefile  dune  plot.py  spinc.c  test1.ml  test2.ml
binary_trees/: Makefile  README.md  binarytrees.ml  binarytrees_parallel.ml  binarytrees_parallel2.ml  dune
binary_trees_slowdown/: binary_trees5.ml  binary_trees5_mc.ml  dune
cppexnocaml/: Makefile  test2.ml  test2_.cpp
delimcc/: effects_cps.ml  handler_monad.ml  shift_reset_exn_cps.ml
eff_bench/: MVar.ml  chameneos.ml  dune  generator.ml  sched.ml
effect-in-mli/: dune  foo.ml  foo.mli
integridb/: README.md  dune-project  integridb.opam
integridb/lib/: dune  integridb.ml  integridb.mli
integridb/test/: dune
irmin-example/: Makefile  dune  test_mem.ml
linearity_june_2025/: linear_ref.ml  unique_ref.ml
lockfree_hashtable/: dune-project
lwt_find_bug/: Makefile  dune  lwt_test.ml
lwt_test/: dune  dune-project  test.ml
merge_sort/: Makefile  README.md  dune  merge_sort.ml
modes/: behavior_modes.ml  unique_ref.ml
mvar-eff/: .merlin  MVar.ml  MVar.mli  (+8 more)
(+75 files in other folders)
