(executable
  (name binarytrees)
	(modules binarytrees)
	(ocamlopt_flags (:standard -O3)))

(executable
  (name binarytrees5_multicore)
	(modules binarytrees5_multicore)
	(libraries domainslib)
	(ocamlopt_flags (:standard -O3)))

(executable
  (name binarytrees_parallel2)
	(modules binarytrees_parallel2)
	(libraries domainslib)
	(ocamlopt_flags (:standard -O3)))

(executable
  (name binarytrees_parallel)
	(modules binarytrees_parallel)
	(libraries domainslib)
	(ocamlopt_flags (:standard -O3)))
